--- a/recipes/chicken-tarragon-pasta.html
+++ b/recipes/chicken-tarragon-pasta.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Chicken Tarragon Pasta</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="recipes/chicken-tarragon-pasta.html">Chicken Tarragon Pasta</a></p>
+    <h1>Chicken Tarragon Pasta</h1>
 </body>
 
 </html>
