Add img/chicken-tarragon-pasta.jpeg, created page layout of chicken-tarragon-pasta.html

--- a/recipes/chicken-tarragon-pasta.html
+++ b/recipes/chicken-tarragon-pasta.html
@@ -10,6 +10,22 @@
 
 <body>
     <h1>Chicken Tarragon Pasta</h1>
+    <img src="../img/chicken-tarragon-pasta.jpeg" alt="Chicken Tarragon Pasta">
+    <h3>Description</h3>
+    <p>xyz</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>x</li>
+        <li>y</li>
+        <li>z</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>x</li>
+        <li>y</li>
+        <li>z</li>
+    </ol>
+
 </body>
 
 </html>
