Add thai-green-curry.html, add thai-green-curry.jpeg, add link to thai-green-curry on index.html, create page layout of thai-green-curry.html

--- a/recipes/thai-green-curry.html
+++ b/recipes/thai-green-curry.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chicken Tarragon Pasta</title>
+    <title>Thai Green Curry</title>
 </head>
 
 <body>
-    <h1>Chicken Tarragon Pasta</h1>
-    <img src="../img/chicken-tarragon-pasta.jpeg" alt="A bowl of chicken tarragon pasta">
+    <h1>Thai Green Curry</h1>
+    <img src="../img/thai-green-curry.jpeg" alt="A bowl of Thai green curry">
     <h3>Description</h3>
     <p>xyz</p>
     <h3>Ingredients</h3>
