--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/chicken-tarragon-pasta.html">Chicken Tarragon Pasta</a></p>
+    <ul>
+        <li><a href="recipes/chicken-tarragon-pasta.html">Chicken Tarragon Pasta</a></li>
+        <li><a href="recipes/thai-green-curry.html">Thai Green Curry</a></li>
+    </ul>
 </body>
 
 </html>
